# adaptive-model-registry

./: .gitignore  .railway-ignore  AGENTS.md  Dockerfile  README.md  go.mod  go.sum  railway.json
.github/workflows/: ci.yml
cmd/api/: main.go
internal/api/: health.go  models.go  providers.go  root.go  routes.go  util.go  utils.go
internal/config/: config.go
internal/database/: database.go
internal/models/: filter.go  model.go  parameters.go  types.go
internal/repository/: model_repository.go  provider_repository.go
internal/server/: server.go
internal/services/: model_service.go  provider_service.go
scripts/: RAILWAY_DEPLOYMENT.md  pre_deploy.sh  pyproject.toml  sync_openrouter_models.py
scripts/setup/: README.md  __init__.py  __main__.py
scripts/setup/fetchers/: __init__.py  cache.py  openrouter.py  zdr.py
scripts/setup/inserters/: __init__.py  bulk_insert.py
scripts/setup/models/: __init__.py  database.py  openrouter.py  zdr.py
scripts/setup/updaters/: __init__.py  architecture.py  endpoints.py  llm_models.py  parameters.py  pricing.py  providers.py
scripts/setup/utils/: __init__.py  exports.py  validation.py
